--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>CParkSolutions</title>
+  <title>ColinParkSolutions</title>
 
   <!-- Custom fonts for this theme -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -51,10 +51,10 @@
     <div class="container d-flex align-items-center flex-column">
 
       <!-- Masthead Avatar Image -->
-      <img class="masthead-avatar mb-5" src="img/avataaars.svg" alt="">
+      <img class="masthead-avatar mb-5" src="img/portfolio/colinface.jpg" alt="">
 
       <!-- Masthead Heading -->
-      <h1 class="masthead-heading text-uppercase mb-0">Start Bootstrap</h1>
+      <h1 class="masthead-heading text-uppercase mb-0">Colin James Park</h1>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
@@ -260,7 +260,6 @@
               <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
             </div>
           </form> -->
-          <!-- modify this form HTML and place wherever you want your form -->
 
           <form
             action="https://formspree.io/mnqjgebz"
@@ -275,7 +274,6 @@
               <textarea name="message"></textarea>
             </label>
 
-            <!-- your other form fields go here -->
 
             <button type="submit">Send</button>
           </form>
