--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <form action="https://formspree.io/mnqjgebz" method="POST" id="contactForm">
-            <div id="control-group stylebox">
+            <div id="control-group" class="stylebox">
               <label>
                 Your email:
                 <input type="text" name="_replyto" class="form-control">
